objects/CCDv2Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will provide a mapping for xml tags to object fields. This setting is consumed by the class ClsCCDMapping</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Provide a field API Name to where to map the xml value to</description>
        <inlineHelpText>Provide a field API Name to where to map the xml value to</inlineHelpText>
        <label>Field Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_Tag__c</fullName>
        <description>This field sets the xml tag name</description>
        <inlineHelpText>This field sets the xml tag name</inlineHelpText>
        <label>XML Tag</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <description>the sObject API Name to where the value from the xml will be mapped to</description>
        <inlineHelpText>the sObject API Name to where the value from the xml will be mapped to</inlineHelpText>
        <label>sObject</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CCDv2Mapping</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Type__c</columns>
        <columns>XML_Tag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>